--- a/Data Modelling Project/etl.ipynb
+++ b/Data Modelling Project/etl.ipynb
@@ -11,7 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
