etl pipeline added

--- a/Data Modelling Project/test.ipynb
+++ b/Data Modelling Project/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'Connected: student@sparkifydb'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -47,7 +47,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -65,13 +65,72 @@
        "        <th>location</th>\n",
        "        <th>user_agent</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>0</td>\n",
+       "        <td>2018-11-09 00:06:17.796000</td>\n",
+       "        <td>42</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>275</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2018-11-09 00:09:46.796000</td>\n",
+       "        <td>42</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>275</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-09 00:12:27.796000</td>\n",
+       "        <td>42</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>275</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-09 00:14:52.796000</td>\n",
+       "        <td>42</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>275</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-09 00:17:44.796000</td>\n",
+       "        <td>42</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>275</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('0', datetime.datetime(2018, 11, 9, 0, 6, 17, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       " ('1', datetime.datetime(2018, 11, 9, 0, 9, 46, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       " ('2', datetime.datetime(2018, 11, 9, 0, 12, 27, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       " ('3', datetime.datetime(2018, 11, 9, 0, 14, 52, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       " ('4', datetime.datetime(2018, 11, 9, 0, 17, 44, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +149,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -104,13 +163,52 @@
        "        <th>gender</th>\n",
        "        <th>level</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>Harper</td>\n",
+       "        <td>Barrett</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>Harper</td>\n",
+       "        <td>Barrett</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>Harper</td>\n",
+       "        <td>Barrett</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>Harper</td>\n",
+       "        <td>Barrett</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>Harper</td>\n",
+       "        <td>Barrett</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(42, 'Harper', 'Barrett', 'M', 'paid'),\n",
+       " (42, 'Harper', 'Barrett', 'M', 'paid'),\n",
+       " (42, 'Harper', 'Barrett', 'M', 'paid'),\n",
+       " (42, 'Harper', 'Barrett', 'M', 'paid'),\n",
+       " (42, 'Harper', 'Barrett', 'M', 'paid')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +227,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -143,13 +241,52 @@
        "        <th>year</th>\n",
        "        <th>duration</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOYMRWW12A6D4FAB14</td>\n",
+       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>0</td>\n",
+       "        <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOYMRWW12A6D4FAB14</td>\n",
+       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>0</td>\n",
+       "        <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOYMRWW12A6D4FAB14</td>\n",
+       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>0</td>\n",
+       "        <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOYMRWW12A6D4FAB14</td>\n",
+       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>0</td>\n",
+       "        <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOYMRWW12A6D4FAB14</td>\n",
+       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>0</td>\n",
+       "        <td>268</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
+       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
+       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
+       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
+       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +305,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -182,13 +319,52 @@
        "        <th>latitude</th>\n",
        "        <th>longitude</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
+       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
+       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
+       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
+       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +383,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -223,13 +399,62 @@
        "        <th>year</th>\n",
        "        <th>weekday</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-09 00:06:17.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>9</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-09 00:09:46.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>9</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-09 00:12:27.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>9</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-09 00:14:52.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>9</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-09 00:17:44.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>9</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(datetime.datetime(2018, 11, 9, 0, 6, 17, 796000), 0, 9, 45, 11, 2018, 4),\n",
+       " (datetime.datetime(2018, 11, 9, 0, 9, 46, 796000), 0, 9, 45, 11, 2018, 4),\n",
+       " (datetime.datetime(2018, 11, 9, 0, 12, 27, 796000), 0, 9, 45, 11, 2018, 4),\n",
+       " (datetime.datetime(2018, 11, 9, 0, 14, 52, 796000), 0, 9, 45, 11, 2018, 4),\n",
+       " (datetime.datetime(2018, 11, 9, 0, 17, 44, 796000), 0, 9, 45, 11, 2018, 4)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
