--- a/Data Modelling Project/test.ipynb
+++ b/Data Modelling Project/test.ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +33,7 @@
        "'Connected: student@sparkifydb'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -130,7 +139,7 @@
        " ('4', datetime.datetime(2018, 11, 9, 0, 17, 44, 796000), 42, 'paid', None, None, 275, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +217,7 @@
        " (42, 'Harper', 'Barrett', 'M', 'paid')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,51 +251,51 @@
        "        <th>duration</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>SOBCOSW12A8C13D398</td>\n",
+       "        <td>Rumba De Barcelona</td>\n",
+       "        <td>AR7SMBG1187B9B9066</td>\n",
        "        <td>0</td>\n",
-       "        <td>268</td>\n",
+       "        <td>218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>SOPEGZN12AB0181B3D</td>\n",
+       "        <td>Get Your Head Stuck On Your Neck</td>\n",
+       "        <td>AREDL271187FB40F44</td>\n",
        "        <td>0</td>\n",
-       "        <td>268</td>\n",
+       "        <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>SOBKWDJ12A8C13B2F3</td>\n",
+       "        <td>Wild Rose (Back 2 Basics Mix)</td>\n",
+       "        <td>AR36F9J1187FB406F1</td>\n",
        "        <td>0</td>\n",
-       "        <td>268</td>\n",
+       "        <td>231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>SOLEYHO12AB0188A85</td>\n",
+       "        <td>Got My Mojo Workin</td>\n",
+       "        <td>ARAGB2O1187FB3A161</td>\n",
        "        <td>0</td>\n",
-       "        <td>268</td>\n",
+       "        <td>338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>0</td>\n",
-       "        <td>268</td>\n",
+       "        <td>SOFFKZS12AB017F194</td>\n",
+       "        <td>A Higher Place (Album Version)</td>\n",
+       "        <td>ARBEBBY1187B9B43DB</td>\n",
+       "        <td>1994</td>\n",
+       "        <td>236</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
-       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
-       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
-       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268),\n",
-       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268)]"
+       "[('SOBCOSW12A8C13D398', 'Rumba De Barcelona', 'AR7SMBG1187B9B9066', 0, 218),\n",
+       " ('SOPEGZN12AB0181B3D', 'Get Your Head Stuck On Your Neck', 'AREDL271187FB40F44', 0, 46),\n",
+       " ('SOBKWDJ12A8C13B2F3', 'Wild Rose (Back 2 Basics Mix)', 'AR36F9J1187FB406F1', 0, 231),\n",
+       " ('SOLEYHO12AB0188A85', 'Got My Mojo Workin', 'ARAGB2O1187FB3A161', 0, 338),\n",
+       " ('SOFFKZS12AB017F194', 'A Higher Place (Album Version)', 'ARBEBBY1187B9B43DB', 1994, 236)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -320,51 +329,51 @@
        "        <th>longitude</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td>AR7SMBG1187B9B9066</td>\n",
+       "        <td>Los Manolos</td>\n",
        "        <td></td>\n",
        "        <td>nan</td>\n",
        "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td>AREDL271187FB40F44</td>\n",
+       "        <td>Soul Mekanik</td>\n",
        "        <td></td>\n",
        "        <td>nan</td>\n",
        "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td>AR36F9J1187FB406F1</td>\n",
+       "        <td>Bombay Rockers</td>\n",
+       "        <td>Denmark</td>\n",
+       "        <td>56.27609</td>\n",
+       "        <td>9.51695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARAGB2O1187FB3A161</td>\n",
+       "        <td>Pucho &amp; His Latin Soul Brothers</td>\n",
        "        <td></td>\n",
        "        <td>nan</td>\n",
        "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>Jeff And Sheri Easter</td>\n",
-       "        <td></td>\n",
-       "        <td>nan</td>\n",
-       "        <td>nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>Jeff And Sheri Easter</td>\n",
-       "        <td></td>\n",
+       "        <td>ARBEBBY1187B9B43DB</td>\n",
+       "        <td>Tom Petty</td>\n",
+       "        <td>Gainesville, FL</td>\n",
        "        <td>nan</td>\n",
        "        <td>nan</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
-       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
-       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
-       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan),\n",
-       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', '', nan, nan)]"
+       "[('AR7SMBG1187B9B9066', 'Los Manolos', '', nan, nan),\n",
+       " ('AREDL271187FB40F44', 'Soul Mekanik', '', nan, nan),\n",
+       " ('AR36F9J1187FB406F1', 'Bombay Rockers', 'Denmark', 56.27609, 9.51695),\n",
+       " ('ARAGB2O1187FB3A161', 'Pucho & His Latin Soul Brothers', '', nan, nan),\n",
+       " ('ARBEBBY1187B9B43DB', 'Tom Petty', 'Gainesville, FL', nan, nan)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +463,7 @@
        " (datetime.datetime(2018, 11, 9, 0, 17, 44, 796000), 0, 9, 45, 11, 2018, 4)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
